--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
+        "spatie/laravel-permission": "^4.2",
         "webpatser/laravel-uuid": "3.0"
     },
     "require-dev": {
