--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
+        "realrashid/sweet-alert": "^4.0",
         "spatie/laravel-permission": "^4.2",
         "webpatser/laravel-uuid": "3.0"
     },
